--- a/html/css/masters/A.css
+++ b/html/css/masters/A.css
@@ -18,11 +18,6 @@ body{
     min-height: 100vh;
 }
 
-body {
-    /* min-width: 430px; */
-    /* display: flex; */
-}
-
 a {
     color: #727272;
     font-weight: 500;
